# darcswatch

./: CachedGet.hs  Darcs.hs  HTML.hs  MD5.lhs  MD5String.hs  Main.hs  MultiMap.hs  README  StringCrypto.hs  darcswatch.cabal  documentation.html  mailfilter.sh
example/: config  keyring
example/mails/: patchBEbWYh  patchInvTest  patchOKsIKA  patch_1f03d40fbe9d0593a9eb7fbefc3bfa85  patch_a963212153b4f5e3f1777daa562dd989  patchsmaJcF  testmail1
src/: ByteStringUtils.hs  CGI-Main.hs  CachedGet.hs  ConvertData-Main.hs  ConvertData.hs  Darcs.hs  Generate-Main.hs  HTML.hs  ImportBundle-Main.hs  ImportMail-Main.hs  LockRestart.hs  Main.hs  MultiMap.hs  OldDate.lhs  Printer.lhs  PullRepos-Main.hs  SHA1.hs  UpdateRepoData-Main.hs  Zip.hs
src/Darcs/Watch/: Data.hs  GenerateOutput.hs  ImportMail.hs  Mail.hs  PullRepos.hs  Roundup.hs  Storage.hs  UpdateRepoData.hs
