Name:            darcswatch
version:         0.0.1.0
Category:        Distribution
name:            darcswatch
author:          Joachim Breitner <mail@joachim-breitner.de>
Synopsis:        track application of darcs patches
License:         GPL
License-File:	 COPYING
Build-Depends:   haskell98
                 ,base
                , network
                , HTTP
                , old-time
                , Crypto
                , parsec
                , containers
                , xhtml
                , unix
                , directory
Build-Type:     Simple
Executable:     darcswatch
Main-Is:        Main.hs
