Name:            darcswatch
version:         0.0.1.0
Category:        Distribution
name:            darcswatch
author:          Joachim Breitner
maintainer:      Joachim Breitner <mail@joachim-breitner.de>
Synopsis:        Track application of Darcs patches
Description:     DarcsWatch is a tool to track the state of darcs patches
                 that have been submitted to some project, usually by
                 using the "darcs send" command. It allows both submitters
                 and project maintainers to get an overview of patches that
                 have been submitted but not yet applied. Some notable features are:
                 .
                 * Reads both darcs1 and darcs2.0 (hashed) format repositories.
                 .
                 * Displays patch summaries per user and per repository.
                 .
                 * Patch diff can be reviewed directly.
                 .
                 * Download link for each patch, to apply without searching for the email.
                 .
                 * Knows about inverse patches and uses them to consider patches obsolete.
Homepage:        http://darcswatch.nomeata.de/
License:         GPL
License-File:	 LICENSE
Build-Depends:   haskell98
                 ,base
                , network
                , HTTP
                , old-time
                , Crypto
                , parsec
                , containers
                , xhtml
                , unix
                , directory

extra-source-files: mailfilter.sh
data-files:     documentation.html, README, example/config
                example/output, example/keyring, example/mails/patchInvTest,
                example/mails/patch_1f03d40fbe9d0593a9eb7fbefc3bfa85,
                example/mails/patchsmaJcF, example/mails/patchBEbWYh,
                example/mails/patchOKsIKA,
                example/mails/patch_a963212153b4f5e3f1777daa562dd989

Build-Type:     Simple
Executable:     darcswatch
Main-Is:        Main.hs
hs-source-dirs: src